--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-git clone https://github.com/username/username.github.io
-git add index.html
-git commit -m "Add index.html"
-git push origin main
-cd CalPro135.github.io
+<!DOCTYPE html>
+<html>
+<head>
+    <title>The Proxy Huv</title>
+</head>
+<body>
+    <h1>Welcome to the Proxy Hub sent from TBBH!</h1>
+    <p>By the C Coder</p>
+</body>
+</html>
