--- a/index.html
+++ b/index.html
@@ -1,10 +1,208 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>The Proxy Huv</title>
+    <title>Clever | Portal</title>
+    <link rel="icon" type="image/png" href="clever-icon.png">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1 {
+            color: #4CAF50;
+        }
+
+        .links {
+            margin: 20px 0;
+        }
+
+        .links button {
+            margin: 5px;
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .links button:hover {
+            background-color: #45a049;
+        }
+
+        form {
+            margin-top: 20px;
+        }
+
+        input {
+            width: 400px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        button {
+            padding: 10px 20px;
+            margin-left: 10px;
+            font-size: 16px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        iframe {
+            margin-top: 20px;
+            width: 100%;
+            height: 600px;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to the Proxy Hub sent from TBBH!</h1>
-    <p>By the C Coder</p>
+    <h1>The Basics Broken Down(SCROLL DOWN FOR SAFER METHODS)</h1>
+    <p>Use tested and working (hopefully) proxies below, or try your own link!</p>
+    <p>(May not work because certain websites do not want to connect)</p>
+    <p>For Bing, it may not work very well as you cannot go to links or it redirects you.</p>
+    <p>If you want even more embedded options that are safer from bloxdi, scroll down.</p>
+
+
+    <!-- Premade Links -->
+    <div class="links">
+        <button onclick="loadPremade('https://expertise.cosmetologylive.beauty')">Freedom Project</button>
+        <button onclick="loadPremade('https://r.amplifylearning.cf/')">Rammerhead (if doesn’t work, use below)(doesnt work always)</button>
+        <button onclick="loadPremade('https://r.flipgrid.cf/')">Rammerhead (backup)(also doesnt work always)</button>
+        <button onclick="loadPremade('https://www.wikipedia.com')">Wikipedia</button>
+        <button onclick="loadPremade('https://www.bing.com/hp?mkt=us-eN')"">Bing (use if you don’t want things showing up in your history)</button>
+        <button onclick="loadPremade('https://brooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo.cerredes.cl/&')"">GamePage(always working)
+        <button onclick="loadPremade('https://vortron-rd.github.io/T-Crack')"">T-Crack Proxy(good)</button>
+
+    </div>
+
+    <!-- URL Input -->
+    <form id="browserForm">
+        <input type="text" id="urlInput" placeholder="Enter URL (e.g., https://example.com)">
+        <button type="button" onclick="loadPage()">Go</button>
+    </form>
+
+    <!-- Iframe for Displaying Websites -->
+    <iframe id="browserFrame"></iframe>
+    <button onclick="toggleFullscreen()">Fullscreen</button>
+
+    <script>
+        // Function to load custom URLs
+        function loadPage() {
+            const url = document.getElementById('urlInput').value;
+            const iframe = document.getElementById('browserFrame');
+            if (url.startsWith('http://') || url.startsWith('https://')) {
+                iframe.src = url;
+            } else {
+                alert('Please enter a valid URL starting with http:// or https://');
+            }
+        }
+
+        // Function to load premade links
+        function loadPremade(url) {
+            const iframe = document.getElementById('browserFrame');
+            iframe.src = url;
+        }
+
+        // Fullscreen Function
+        function toggleFullscreen() {
+            const iframe = document.getElementById('browserFrame');
+            if (!document.fullscreenElement) {
+                iframe.requestFullscreen().catch(err => {
+                    alert(`Error attempting fullscreen: ${err.message}`);
+                });
+            } else {
+                document.exitFullscreen();
+            }
+        }
+    </script>
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Custom about:blank with User Links</title>
+</head>
+<body>
+    <h1>Open a Blank Tab and Embed Content</h1>
+    <p>Use premade links or add your own!</p>
+
+    <!-- Premade Buttons -->
+    <button onclick="openIframeTab('https://expertise.cosmetologylive.beauty')">Open Freedom Project in about:blank iframe</button>
+    <button onclick="openIframeTab('https://r.amplifylearning.cf/')">Open Rammerhead in about:blank iframe</button>
+    <button onclick="openIframeTab('https://r.flipgrid.cf/')">Open Rammerhead Backup in about:blank iframe</button>
+    <button onclick="openIframeTab('https://bandit.rip')">Open Bandit.Rip(sometimes works) in about:blank iframe</button>
+
+    <p> </p>
+
+    
+
+    <!-- User Input -->
+    <div>
+        <p>Will have even less websites that allow(this is extremely embedded), but more safe from redirects outside.</p>
+        <input type="text" id="customLink" placeholder="Enter URL (e.g., https://example.com)">
+        <button onclick="openIframeTab(document.getElementById('customLink').value)">Embed Custom Link</button>
+    </div>
+
+    <script>
+        function openIframeTab(url) {
+            // Validate the URL
+            if (url.startsWith('http://') || url.startsWith('https://')) {
+                // Open a new about:blank tab
+                const newTab = window.open('about:blank', '_blank');
+
+                // Inject an iframe into the blank tab
+                if (newTab) {
+                    newTab.document.write(`
+                        <!DOCTYPE html>
+                        <html>
+                        <head>
+                            <title>Nested Content</title>
+                            <style>
+                                body {
+                                    margin: 0;
+                                    padding: 0;
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    height: 100vh;
+                                    background-color: #f9f9f9;
+                                }
+                                iframe {
+                                    width: 90%;
+                                    height: 90%;
+                                    border: none;
+                                }
+                            </style>
+                        </head>
+                        <body>
+                            <iframe src="${url}"></iframe>
+                        </body>
+                        </html>
+                    `);
+
+                    // Close the document to finish rendering
+                    newTab.document.close();
+                } else {
+                    alert("Failed to open a new tab. Please check your browser's popup blocker settings.");
+                }
+            } else {
+                alert('Please enter a valid URL starting with http:// or https://');
+            }
+        }
+    </script>
 </body>
 </html>
